--- a/src/components/layout/Footer/Footer.css
+++ b/src/components/layout/Footer/Footer.css
@@ -47,7 +47,7 @@ footer {
         padding: 1px ;
     }
     .social-media {
-        margin-right: 27%;
+        margin-right: 23%;
     }
 
 }
@@ -58,7 +58,7 @@ footer {
         padding: 1px ;
     }
     .social-media {
-        margin-right: 30%;
+        margin-right: 25%;
     }
 
 }
